update k8s_note